[gd_scene load_steps=5 format=3 uid="uid://cwv2o86pplvt4"]

[ext_resource type="Script" path="res://Scenes/ceiling.gd" id="1_wxu4e"]
[ext_resource type="Texture2D" uid="uid://tbb6f0hu80r7" path="res://Assets/Sprites/border2.png" id="2_0jm2b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_es4g8"]
size = Vector2(1280, 312)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jfkvd"]
size = Vector2(1280, 311)

[node name="Ceiling" type="Node2D"]
script = ExtResource("1_wxu4e")

[node name="Ceiling1" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Ceiling1"]
visible = false
texture = ExtResource("2_0jm2b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceiling1"]
position = Vector2(0, -139)
shape = SubResource("RectangleShape2D_es4g8")

[node name="Ceiling2" type="Area2D" parent="."]
position = Vector2(1280, 0)

[node name="Sprite2D" type="Sprite2D" parent="Ceiling2"]
visible = false
texture = ExtResource("2_0jm2b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceiling2"]
position = Vector2(0, -138.5)
shape = SubResource("RectangleShape2D_jfkvd")

[connection signal="body_entered" from="Ceiling1" to="." method="_on_body_entered"]
[connection signal="body_entered" from="Ceiling2" to="." method="_on_body_entered"]
